--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -52,7 +52,7 @@ img {
 // Header Section
 
 .homeHeader {
-    @include headerImage(url('../assets/header-image.jpg'));       
+    @include headerImage(url('../assets/headerImage.jpg'));       
 }
 
 .container {
@@ -84,8 +84,8 @@ ul {
             width: 105%;
             height: 2px;
             background-color:#4ceea7;
-            z-index: 55;
-            position:absolute;
+            z-index: 999;
+            position: absolute;
             bottom: -5px;
             left: -4px;
         }
@@ -105,6 +105,9 @@ ul {
     border: 50px solid #FDFA69;
     border-right: 0;
     z-index: 4;
+    img {
+        display: block;
+    }
 }
 // Drop-down menu
 .dropDownMenu {
@@ -112,9 +115,10 @@ ul {
     position:absolute;
     top: 1%;
     left: 1%;
+    z-index: 999;
 }
 input[type=checkbox] {
-    display:none
+    display:none;
 }
 label {
     font-size: 30px;
@@ -139,7 +143,7 @@ input:checked ~ .menuContent {
 
 .textContainer {
     margin: 0 auto;
-    width:60%;
+    width: 60%;
     height: 100%;
     padding-bottom : 200px;
     padding-top: 280px;
