more changes in SCSS

--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -408,7 +408,7 @@ footer {
     }
 
     nav {
-        display:none; // is this still seen by screen reader????
+        display:none; 
     }
     .dropDownMenu {
         display: block;
