--- a/styles/sass/_contact.scss
+++ b/styles/sass/_contact.scss
@@ -55,6 +55,12 @@ form.container {
     input,
     textarea {
         background-color: #fafafa;
+        padding: 10px 0 10px 30px;
+    }
+
+    ::placeholder {
+        color: black;
+        opacity: 1;
     }
     
 }
