--- a/styles/sass/_home.scss
+++ b/styles/sass/_home.scss
@@ -23,7 +23,7 @@ li {
 button {
     @include basicFont(20px, 1px, 32px);
     text-align: center;
-    padding: 0 10px;
+    padding: 8px 10px;
     background-color: #4ceea7;
     border: none;
 }
@@ -92,7 +92,7 @@ ul {
     }
 
     li:last-child{
-        padding-right: 100px;
+        padding-right: 130px;
     }  
 
 }
