added functionality to the comment form

--- a/styles/sass/_blogPost.scss
+++ b/styles/sass/_blogPost.scss
@@ -101,7 +101,7 @@
 }
 
 
-.commentSection{
+.commentSection, .formSection{
     background-color: #Effdf3;
     display:flex;
     flex-direction: column;
